fix: page table figure should be displayd as grid
LIIKUNTA-771.

1. Fix page content to overflow with too wide table.
2. Fix table figure element to be displayed as grid, to get it
scrollable on small screens.

--- a/src/core/pageContent/pageMainContent.module.scss
+++ b/src/core/pageContent/pageMainContent.module.scss
@@ -12,6 +12,7 @@
 .mainContent {
   figure {
     margin: 0;
+    display: grid;
     img {
       height: auto;
     }
